--- a/Jogo-de-adivinhação/src/global.css
+++ b/Jogo-de-adivinhação/src/global.css
@@ -14,6 +14,12 @@ body {
   font-optical-sizing: auto;
 }
 
+input {
+  font-family: "Noto Sans", serif;
+  font-optical-sizing: auto;
+  outline: none;
+}
+
 button {
     cursor: pointer;
     transition: filter 0.2s;
